fixed align content for all subpage

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,14 +4,20 @@ main{
     flex-direction: column;
 
     ::ng-deep .contentWrapper{
-        margin-top: 60px;
-        height:calc(100% - 60px);
+        margin-top: 80px;
+        height:calc(100% - 80px);
         display:flex;
         justify-content:center;
         align-items: center;
 
-        @media screen and(max-width:768px){
+        // @media screen and(max-width:768) {
+            
+        // }
+
+        @media screen and (min-width:768px) and (max-width:1366px){
             height: 100%;
+            margin-top:60px;
+            height:calc(100% - 60px);
             // height:fit-content;
         }
     }
